# local-agent

./: .gitignore  AGENTS.md  DESIGN_INSIGHTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  shell-integration.sh  start.sh
.github/workflows/: ci.yml
src/local_agent/: cli.py  commands.py  config.py  context.py  ollama_client.py  prompts.py  safety.py  utils.py
tests/: test_cli.py  test_commands.py  test_config.py  test_context.py  test_quote_mode.py  test_safety.py  test_utils.py  test_version.py
