[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent"
version = "0.1.1"
description = "Local terminal AI coding assistant (via Ollama)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Harry Dai" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/HY-D1/local-agent"

[project.scripts]
local-agent = "local_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8",
  "build>=1",
  "twine>=6",
  "pkginfo>=1.12.0",
]